ASUSFETest/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Converstion Process</fullName>
        <description>Used to manage picklist for status during the conversion process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open - Converted</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Prospective Student</fullName>
        <description>Record type for documenting recruitment interaction</description>
        <isActive>true</isActive>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ASU_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the student has attended ASU. If known, please also enter the EMPLID.</inlineHelpText>
        <label>ASU Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Academic_Plan_List__c</fullName>
        <description>Hidden field to capture plan code. To be used if there are issues or errors on the import of the new Lead from the web form.</description>
        <label>RFI Academic Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <description>Used to capture College of Interest from the RFI web form. Captures PS Code and used if there are any issues importing the Lead.</description>
        <label>RFI College</label>
        <picklist>
            <picklistValues>
                <fullName>GRAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRGC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRNH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRNU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LWLW</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <description>Designates the primary contact method.</description>
        <inlineHelpText>Select the primary method the Lead would like to be contacted.</inlineHelpText>
        <label>Contact Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Convert_Contact_Account_ID__c</fullName>
        <formula>Convert_Contact__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The ID of the Account Associated with the Contact specified in the Convert To Contact Lookup field. This is a lazy hack to allow the trigger to work for the proof of concept.</inlineHelpText>
        <label>Convert: Contact Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convert_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If a Contact  is connected here, the Lead will automatically convert to that Contact (without an Opportunity).</inlineHelpText>
        <label>Convert: Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convert_Create_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Conversion process initiated by checking &quot;Convert: Perform Conversion&quot; will result in the creation of a new Opportunity.</inlineHelpText>
        <label>Convert: Create Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Convert_Perform_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, this Contact will be Converted with a Status of &quot;Prospect. To Convert into an exciting Contact, associate that record in the &quot;Convert: Contact&quot; field. To determine if an Opportunity is created, choose an option in &quot;Convert: Create Opportunity&quot;</inlineHelpText>
        <label>Convert: Perform Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_Citizenship__c</fullName>
        <label>Country of Citizenship</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Load__c</fullName>
        <label>Course Load</label>
        <picklist>
            <picklistValues>
                <fullName>Part-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <label>Degree Type</label>
        <picklist>
            <picklistValues>
                <fullName>Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>PeopleSoft unique ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Please enter the student&apos;s ID number.</inlineHelpText>
        <label>EMPLID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <description>Field to capture email status response from BriteVerify. Temp = temporary email address. Role = role-based email address.</description>
        <label>Email Status</label>
        <picklist>
            <picklistValues>
                <fullName>Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment_Term__c</fullName>
        <label>Enrollment Term</label>
        <picklist>
            <picklistValues>
                <fullName>2012 Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017 Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017 Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017 Fall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Am. Indian Alaska Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black African-American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jr_Sr_GPA_Scale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GPA scale for Junior and Senior course work</description>
        <label>Jr-Sr GPA Scale</label>
        <referenceTo>GPA_Scale__c</referenceTo>
        <relationshipLabel>Leads (Jr-Sr GPA Scale)</relationshipLabel>
        <relationshipName>Leads_JrSrGPAscale</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jr_Sr_GPA__c</fullName>
        <description>GPA of Junior and Senior course work</description>
        <inlineHelpText>GPA of Junior and Senior course work</inlineHelpText>
        <label>Jr-Sr GPA</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Subtype__c</fullName>
        <description>Gives more specific source description</description>
        <label>Lead Source Subtype</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Coll Technology &amp; Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College of Public Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cronkite School-Journ/MassComm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herberger Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ira A Fulton Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberal Arts &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MaryLouFulton Teachers College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Interdis Arts &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing &amp; Health Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Letters &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School of Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W.P. Carey School of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&apos;Connor College of Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASU Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA Today</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS Applying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS GRE Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGSS Personal Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Session - Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Session - Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE Subject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOEFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Diversity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Online__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Web form question: Check here if interested in earning your degree exclusively Online</description>
        <inlineHelpText>If checked, the student is interested in earning their degree online.</inlineHelpText>
        <label>Interested in Online Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruiting_Email__c</fullName>
        <description>Used to preserve Lead email address and to transfer to the Contact record</description>
        <label>Recruiting Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Research_Experience__c</fullName>
        <inlineHelpText>Select if you know the prospective student has research experience</inlineHelpText>
        <label>Research Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To flag test records in production</description>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Undergraduate_GPA_Scale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Undergraduate GPA Scale</label>
        <referenceTo>GPA_Scale__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads_UGGPAscale</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Undergraduate_GPA__c</fullName>
        <label>Undergraduate GPA</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Major__c</fullName>
        <label>Undergraduate Major</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veteran_Status__c</fullName>
        <description>Graduate College prospect and Degree Search web form selection</description>
        <label>Veteran Status</label>
        <picklist>
            <picklistValues>
                <fullName>I am active duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am a veteran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am a spouse or dependent of an active duty or veteran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserves</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>silverpop__CRMI_Modified_Date__c</fullName>
        <label>CRMI Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Sync_Id__c</fullName>
        <label>Last Sync Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead_Rank__c</fullName>
        <label>Lead Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Behavior_Score__c</fullName>
        <label>Silverpop Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Lead_Rank__c</fullName>
        <label>Silverpop Lead Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Lead_Score__c</fullName>
        <label>Silverpop Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_RecipientID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Silverpop RecipientID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>silverpop__Sync_to_Silverpop_Chk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use &quot;Sync to Silverpop&quot; to determine which leads you want to sync with Silverpop. When the box is checked, the field value CANNOT be changed, the selected leads will be synced to Silverpop and will always sync.</inlineHelpText>
        <label>Sync to Silverpop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>silverpop__Sync_to_Silverpop__c</fullName>
        <label>No Longer Used</label>
        <picklist>
            <picklistValues>
                <fullName>Not Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Test_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Enrollment_Term__c</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Test Leads</label>
        <sharedTo/>
    </listViews>
    <recordTypes>
        <fullName>Processing</fullName>
        <active>true</active>
        <businessProcess>Converstion Process</businessProcess>
        <description>Used to process conversion of the Lead record</description>
        <label>Processing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospective_Student</fullName>
        <active>true</active>
        <businessProcess>Prospective Student</businessProcess>
        <description>For end users to view information on the Lead record</description>
        <label>Prospective Student</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>EMPLID_Requirement</fullName>
        <active>false</active>
        <description>Check to see that the EMPLID is entered if the ASU student checkbox is selected.</description>
        <errorConditionFormula>AND( ASU_Student__c =TRUE,  ISBLANK( EMPLID__c ) )</errorConditionFormula>
        <errorDisplayField>EMPLID__c</errorDisplayField>
        <errorMessage>Please enter the EMPLID for your ASU student.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>silverpop__Disable_Changing_Enable_Sync</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(silverpop__Sync_to_Silverpop_Chk__c ), silverpop__Sync_to_Silverpop_Chk__c=false)</errorConditionFormula>
        <errorMessage>Sync to Silverpop selection cannot be changed. Once the box is checked, it cannot be unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>silverpop__Disable_Changing_To_None</fullName>
        <active>false</active>
        <description>Sync to Silverpop selection cannot be changed. Once set to &quot;Yes, Always Sync&quot; or &quot;No, Don&apos;t Sync&quot; it cannot be changed back to &quot;-None-.”</description>
        <errorConditionFormula>AND( ISCHANGED(silverpop__Sync_to_Silverpop__c ) &amp;&amp; ISPICKVAL( PRIORVALUE(silverpop__Sync_to_Silverpop__c ) , &quot;No, Don&apos;t Sync&quot;) ,ISPICKVAL( silverpop__Sync_to_Silverpop__c  , &quot;&quot;))</errorConditionFormula>
        <errorMessage>Sync to Silverpop selection cannot be changed. Once set to &quot;Yes, Always Sync&quot; or &quot;No, Don&apos;t Sync&quot; it cannot be changed back to &quot;-None-.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>silverpop__Prevent_Change_From_Engage</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
PRIORVALUE( silverpop__Sync_to_Silverpop_Chk__c) = false , 
ISCHANGED( silverpop__CRMI_Modified_Date__c ))</errorConditionFormula>
        <errorDisplayField>silverpop__CRMI_Modified_Date__c</errorDisplayField>
        <errorMessage>Engage contact could not sync to Salesforce because the matching lead or contact in Salesforce has been set to not sync. You will need to change the &quot;Sync to Silverpop&quot; setting for the lead or contact in Salesforce.</errorMessage>
    </validationRules>
</CustomObject>